# b402

./: 001-data-loaders.py  002-splitters.py  003-embeddings.py  004-vector-stores.py  005-retrievers.py  006-top-k.py  007-rag-with-lcel.py  pyproject.toml  zzz-nb001-data-loaders.ipynb  zzz-nb002-rag.ipynb  zzz-nb003-splitters.ipynb  zzz-nb004-embeddings.ipynb  zzz-nb005-vector-stores.ipynb  zzz-nb006-retrievers.ipynb  zzz-nb007-top-k.ipynb  zzz-nb008-rag-with-lcel.ipynb  zzz-nb009-indexing.ipynb
.ipynb_checkpoints/: v1-407-upd-langchain-document-loaders-checkpoint.ipynb  zzz-nb001-192-load-data-checkpoint.ipynb  zzz-nb001-data-loaders-checkpoint.ipynb  zzz-nb003-splitters-checkpoint.ipynb  zzz-nb004-embeddings-checkpoint.ipynb  zzz-nb005-vector-stores-checkpoint.ipynb  zzz-nb006-retrievers-checkpoint.ipynb  zzz-nb008-rag-with-lcel-checkpoint.ipynb  zzz-nb009-indexing-checkpoint.ipynb
data/youtube/: LLM Apps： Overcoming the Context Window limits.m4a
